k8s/overlays/digitalocean/staging/ingress/nginx-ingress-digitalocean-staging.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-gateway-ingress
  namespace: social-media
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-staging
    nginx.ingress.kubernetes.io/proxy-body-size: "20m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api-staging.example.com
      secretName: social-media-staging-tls
  rules:
    - host: api-staging.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-gateway
                port:
                  name: http
